foundation-objs/main/default/objects/Lead/fields/Account_EC_LC_Startup__c.field-meta.xml
<CustomField>
    <fullName>Account_EC_LC_Startup__c</fullName>
    <formula>Account__r.EC_LC_Startup_Account__c</formula>
    <label>Account:EC/LC/Startup</label>
    <type>Text</type>
</CustomField>