foundation-objs/main/default/objects/Lead/fields/Account_Final_segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Final_segment__c</fullName>
    <formula>text(Account__r.Final_Segment__c)</formula>
    <label>Account Final segment</label>
    <type>Text</type>
</CustomField>