foundation-objs/main/default/objects/Lead/fields/Account_Sales_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Owner__c</fullName>
    <formula>Account__r.Sales_Owner_Email__c</formula>
    <label>Account Sales Owner</label>
    <type>Text</type>
</CustomField>