foundation-objs/main/default/objects/Lead/fields/Account_Sales_Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Account_Sales_Owner_Team__c</fullName>
    <formula>Account__r.Sales_Owner__r.Team_WBR_C__c</formula>
    <label>Account Sales Owner Team</label>
    <type>Text</type>
</CustomField>