foundation-objs/main/default/objects/Lead/fields/Account_Type_Account__c.field-meta.xml
<CustomField>
    <fullName>Account_Type_Account__c</fullName>
    <formula>text(Account__r.Account_Type__c)</formula>
    <inlineHelpText>Type of account to which this lead belongs</inlineHelpText>
    <label>Account Type:Account</label>
    <type>Text</type>
</CustomField>