foundation-objs/main/default/objects/Lead/fields/Action_deal_desk__c.field-meta.xml
<CustomField>
    <fullName>Action_deal_desk__c</fullName>
    <label>Action (deal desk)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action Taken,Updated To Lead,Updated to Opportunity,Sent to SME sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>