foundation-objs/main/default/objects/Lead/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>