foundation-objs/main/default/objects/Lead/fields/Anchor_Companys__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Companys__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Anchor Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>AnchorChildLead</relationshipName>
    <type>Lookup</type>
</CustomField>