foundation-objs/main/default/objects/Lead/fields/Anon_ID__c.field-meta.xml
<CustomField>
    <fullName>Anon_ID__c</fullName>
    <label>Anon ID</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>