foundation-objs/main/default/objects/Lead/fields/Approval_for_Co_Ownership__c.field-meta.xml
<CustomField>
    <fullName>Approval_for_Co_Ownership__c</fullName>
    <label>Approval for Co-Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>