foundation-objs/main/default/objects/Lead/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Area</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location_Master__c.City__c</field>
            <operation>equals</operation>
            <valueField>$Source.City__c</valueField>
        </filterItems>
        <filterItems>
            <field>Location_Master__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Area</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location_Master__c</referenceTo>
    <relationshipLabel>Leads (Area)</relationshipLabel>
    <relationshipName>Leads_Area</relationshipName>
    <type>Lookup</type>
</CustomField>