foundation-objs/main/default/objects/Lead/fields/Assign_To_Profiling_Team__c.field-meta.xml
<CustomField>
    <fullName>Assign_To_Profiling_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assign To Profiling Team</label>
    <type>Checkbox</type>
</CustomField>