foundation-objs/main/default/objects/Lead/fields/Available_For_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Allocation__c</fullName>
    <formula>IF(OR(ISNULL(TEXT(Type_of_Lead__c)),ISBLANK(TEXT(Type_of_Lead__c))),false,
				
				IF( ISPICKVAL(Type_of_Lead__c, &apos;MQL&apos;), IF($Label.Central_Profiling == &apos;TRUE&apos;, IF(Profiling_Completed__c ,True,False),True),
							
							IF( AND(ISPICKVAL(Type_of_Lead__c, &apos;NAL&apos;),OR(ISBLANK(TEXT(Industry)),ISBLANK(TEXT(GSTIN__c)),ISBLANK(TEXT(Turnover__c)))),False,True)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available For Allocation</label>
    <type>Checkbox</type>
</CustomField>