foundation-objs/main/default/objects/Lead/fields/B2B_sales__c.field-meta.xml
<CustomField>
    <fullName>B2B_sales__c</fullName>
    <inlineHelpText>Please enter Estimated number of  B2B sales invoices Annually</inlineHelpText>
    <label>B2B sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>