foundation-objs/main/default/objects/Lead/fields/B2C_sales__c.field-meta.xml
<CustomField>
    <fullName>B2C_sales__c</fullName>
    <inlineHelpText>Add Estimated Number of B2C sales invoices</inlineHelpText>
    <label>B2C sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>