foundation-objs/main/default/objects/Lead/fields/buisness_email_id__c.field-meta.xml
<CustomField>
    <fullName>buisness_email_id__c</fullName>
    <label>buisness email id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>