foundation-objs/main/default/objects/Lead/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <label>Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Large Enterprise</fullName>
                <default>true</default>
                <label>Large Enterprise</label>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>