foundation-objs/main/default/objects/Lead/fields/CA_Firm_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>CA_Firm_Registration_Number__c</fullName>
    <label>CA Firm Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>