foundation-objs/main/default/objects/Lead/fields/CA_Membership_ID__c.field-meta.xml
<CustomField>
    <fullName>CA_Membership_ID__c</fullName>
    <label>CA Membership ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>