foundation-objs/main/default/objects/Lead/fields/Calling_Comments__c.field-meta.xml
<CustomField>
    <fullName>Calling_Comments__c</fullName>
    <label>Calling Comments</label>
    <type>TextArea</type>
</CustomField>