foundation-objs/main/default/objects/Lead/fields/Calling_Comments_deal_desk__c.field-meta.xml
<CustomField>
    <fullName>Calling_Comments_deal_desk__c</fullName>
    <label>Calling Comments deal desk</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>