foundation-objs/main/default/objects/Lead/fields/calling_status_deal_desk__c.field-meta.xml
<CustomField>
    <fullName>calling_status_deal_desk__c</fullName>
    <label>calling status deal desk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo scheduled</fullName>
            </value>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Email sent</fullName>
            </value>
            <value>
                <fullName>Language barrier</fullName>
            </value>
            <value>
                <fullName>Callback again</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Invalid phone number</fullName>
            </value>
            <value>
                <fullName>Not Right POC</fullName>
            </value>
            <value>
                <fullName>Not interested(Did not get approval from head)</fullName>
            </value>
            <value>
                <fullName>Switched off</fullName>
            </value>
            <value>
                <fullName>Other Non-actionable leads</fullName>
            </value>
            <value>
                <fullName>Existing Client</fullName>
            </value>
            <value>
                <fullName>In touch with ClearTax</fullName>
            </value>
            <value>
                <fullName>Junk-Explorer/Student</fullName>
            </value>
            <value>
                <fullName>DNP/RNR</fullName>
            </value>
            <value>
                <fullName>Not Connected</fullName>
            </value>
            <value>
                <fullName>Multiple DNP</fullName>
            </value>
            <value>
                <fullName>Directed to right POC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>