foundation-objs/main/default/objects/Lead/fields/Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Name__c</fullName>
    <label>Campaign Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>