foundation-objs/main/default/objects/Lead/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Viable</fullName>
            </value>
            <value>
                <fullName>Reinforcement</fullName>
            </value>
            <value>
                <fullName>Junk</fullName>
            </value>
            <value>
                <fullName>Reinforcement (MQL)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>