foundation-objs/main/default/objects/Lead/fields/Category_of_Company__c.field-meta.xml
<CustomField>
    <fullName>Category_of_Company__c</fullName>
    <label>Category of Company</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Category_of_the_company</valueSetName>
    </valueSet>
</CustomField>