foundation-objs/main/default/objects/Lead/fields/Channel_of_Lead__c.field-meta.xml
<CustomField>
    <fullName>Channel_of_Lead__c</fullName>
    <label>Channel of Lead</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel_of_Lead</valueSetName>
    </valueSet>
</CustomField>