foundation-objs/main/default/objects/Lead/fields/Channel_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads (Channel Partner Account)</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>