foundation-objs/main/default/objects/Lead/fields/Channel_Partner_City__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_City__c</fullName>
    <label>Channel Partner City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>