foundation-objs/main/default/objects/Lead/fields/Channel_Partner_Rep__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads_under</relationshipName>
    <type>Lookup</type>
</CustomField>