foundation-objs/main/default/objects/Lead/fields/Channel_Partner_Sales_Mode__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Sales_Mode__c</fullName>
    <label>Channel Partner Sales Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Distributor / Reseller</fullName>
            </value>
            <value>
                <fullName>Referral Partner</fullName>
            </value>
            <value>
                <fullName>Both Reseller &amp; Commission Partner</fullName>
            </value>
            <value>
                <fullName>Commission Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>