foundation-objs/main/default/objects/Lead/fields/Channel_Partner_Type__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner_Type__c</fullName>
    <label>Channel Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>System Integrator</fullName>
            </value>
            <value>
                <fullName>Custom ERP</fullName>
            </value>
            <value>
                <fullName>Strategic Partner</fullName>
            </value>
            <value>
                <fullName>Chartered Accountant - PSU</fullName>
            </value>
            <value>
                <fullName>Distributor/Reseller</fullName>
            </value>
            <value>
                <fullName>Referral Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>