foundation-objs/main/default/objects/Lead/fields/City2__c.field-meta.xml
<CustomField>
    <fullName>City2__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>City</valueSetName>
    </valueSet>
</CustomField>