foundation-objs/main/default/objects/Lead/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>City</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Location_Master__c.State__c</field>
            <operation>equals</operation>
            <valueField>$Source.State__c</valueField>
        </filterItems>
        <filterItems>
            <field>Location_Master__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>City</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Location_Master__c</referenceTo>
    <relationshipLabel>Leads (City)</relationshipLabel>
    <relationshipName>Leads_City</relationshipName>
    <type>Lookup</type>
</CustomField>