foundation-objs/main/default/objects/Lead/fields/Colour__c.field-meta.xml
<CustomField>
    <fullName>Colour__c</fullName>
    <description>This field is used for back end perpose that which  will tell use to pick the colours and for Apex API name as Colour__c and Label Name is Lead Score Colour Code</description>
    <label>Colour</label>
    <length>25</length>
    <type>Text</type>
</CustomField>