foundation-objs/main/default/objects/Lead/fields/Commission_Percentage_First_Year__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percentage_First_Year__c</fullName>
    <label>Commission Percentage (First Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>