foundation-objs/main/default/objects/Lead/fields/Commission_Percentage_Renewals__c.field-meta.xml
<CustomField>
    <fullName>Commission_Percentage_Renewals__c</fullName>
    <label>Commission Percentage (Renewals)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>