foundation-objs/main/default/objects/Lead/fields/Company_GSTIN__c.field-meta.xml
<CustomField>
    <fullName>Company_GSTIN__c</fullName>
    <label>Company GSTIN</label>
    <length>20</length>
    <type>Text</type>
</CustomField>