foundation-objs/main/default/objects/Lead/fields/Competition_Currently_Using__c.field-meta.xml
<CustomField>
    <fullName>Competition_Currently_Using__c</fullName>
    <label>Competition/Currently Using</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Competition_currently_using</valueSetName>
    </valueSet>
</CustomField>