foundation-objs/main/default/objects/Lead/fields/Competition_Not_captured__c.field-meta.xml
<CustomField>
    <fullName>Competition_Not_captured__c</fullName>
    <formula>if(OR(ISPICKVAL(Competition_Currently_Using__c,&quot;Don&apos;t Know&quot;),ISPICKVAL(Competition_Currently_Using__c,&quot;Other&quot;)),1,0)</formula>
    <label>Competition Not captured</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>