foundation-objs/main/default/objects/Lead/fields/Contact_Converted_From_Lead__c.field-meta.xml
<CustomField>
    <fullName>Contact_Converted_From_Lead__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Contact Converted From Lead</label>
    <type>Checkbox</type>
</CustomField>