foundation-objs/main/default/objects/Lead/fields/Contact_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Contact_Numbers__c</fullName>
    <inlineHelpText>Possible Contact Numbers for the POC from various sources, Please paste the right Contact numbers in Primary &amp; Secondary Mobile Fields. also delete Wrong/incorrect Phone numbers on discovery.</inlineHelpText>
    <label>Contact Numbers</label>
    <length>250</length>
    <type>Text</type>
</CustomField>