foundation-objs/main/default/objects/Lead/fields/Conversion_Velocity_From_RPOC__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Velocity_From_RPOC__c</fullName>
    <formula>ConvertedDate -  RPOC_Date__c</formula>
    <label>Conversion Velocity (From RPOC)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>