foundation-objs/main/default/objects/Lead/fields/Country_Code__c.field-meta.xml
<CustomField>
    <fullName>Country_Code__c</fullName>
    <label>Country Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>+91</fullName>
                <default>true</default>
                <label>+91</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>