foundation-objs/main/default/objects/Lead/fields/Credit_Rating__c.field-meta.xml
<CustomField>
    <fullName>Credit_Rating__c</fullName>
    <label>Credit Rating</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>