foundation-objs/main/default/objects/Lead/fields/Currency_Formula__c.field-meta.xml
<CustomField>
    <fullName>Currency_Formula__c</fullName>
    <formula>TEXT(CurrencyIsoCode)</formula>
    <label>Currency(Formula)</label>
    <type>Text</type>
</CustomField>