foundation-objs/main/default/objects/Lead/fields/Date_Of_Incoming_Lead__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Incoming_Lead__c</fullName>
    <label>Date Of Incoming Lead</label>
    <type>Date</type>
</CustomField>