foundation-objs/main/default/objects/Lead/fields/Deal_Desk_Source__c.field-meta.xml
<CustomField>
    <fullName>Deal_Desk_Source__c</fullName>
    <label>Deal Desk Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google Ads(RAD)</fullName>
            </value>
            <value>
                <fullName>Inbound email</fullName>
            </value>
            <value>
                <fullName>Website (RAD)</fullName>
            </value>
            <value>
                <fullName>Webinar RAD</fullName>
            </value>
            <value>
                <fullName>Ozonetel</fullName>
            </value>
            <value>
                <fullName>Chat Bot</fullName>
            </value>
            <value>
                <fullName>CA referral</fullName>
            </value>
            <value>
                <fullName>Events</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>