foundation-objs/main/default/objects/Lead/fields/dealdesk_followup_date__c.field-meta.xml
<CustomField>
    <fullName>dealdesk_followup_date__c</fullName>
    <label>dealdesk followup date</label>
    <type>Date</type>
</CustomField>