foundation-objs/main/default/objects/Lead/fields/DealDesk_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>DealDesk_Owner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DealDesk_Owner Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>