foundation-objs/main/default/objects/Lead/fields/demo_comments_new__c.field-meta.xml
<CustomField>
    <fullName>demo_comments_new__c</fullName>
    <label>demo comments new</label>
    <type>TextArea</type>
</CustomField>