foundation-objs/main/default/objects/Lead/fields/Demo_Date_ID__c.field-meta.xml
<CustomField>
    <fullName>Demo_Date_ID__c</fullName>
    <label>Demo Date ID</label>
    <type>Date</type>
</CustomField>