foundation-objs/main/default/objects/Lead/fields/demo_rescheduled_date__c.field-meta.xml
<CustomField>
    <fullName>demo_rescheduled_date__c</fullName>
    <label>demo rescheduled date</label>
    <type>Date</type>
</CustomField>