foundation-objs/main/default/objects/Lead/fields/Demo_Rescheduled_Date_deal_desk__c.field-meta.xml
<CustomField>
    <fullName>Demo_Rescheduled_Date_deal_desk__c</fullName>
    <label>Demo Rescheduled Date deal desk</label>
    <type>Date</type>
</CustomField>