foundation-objs/main/default/objects/Lead/fields/Demo_Scheduled_Date_deal_desk__c.field-meta.xml
<CustomField>
    <fullName>Demo_Scheduled_Date_deal_desk__c</fullName>
    <label>Demo Scheduled Date deal desk</label>
    <type>DateTime</type>
</CustomField>