foundation-objs/main/default/objects/Lead/fields/Demo_status__c.field-meta.xml
<CustomField>
    <fullName>Demo_status__c</fullName>
    <description>for International leads</description>
    <label>Demo status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Demo_Status</valueSetName>
    </valueSet>
</CustomField>