foundation-objs/main/default/objects/Lead/fields/demo_status_deal_desk__c.field-meta.xml
<CustomField>
    <fullName>demo_status_deal_desk__c</fullName>
    <label>demo status deal desk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo Done</fullName>
            </value>
            <value>
                <fullName>Demo rescheduled</fullName>
            </value>
            <value>
                <fullName>Customer No Show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>