foundation-objs/main/default/objects/Lead/fields/Designation_Cleaned__c.field-meta.xml
<CustomField>
    <fullName>Designation_Cleaned__c</fullName>
    <label>Designation(Cleaned)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Designation_Cleaned</valueSetName>
    </valueSet>
</CustomField>