foundation-objs/main/default/objects/Lead/fields/Domain_Name__c.field-meta.xml
<CustomField>
    <fullName>Domain_Name__c</fullName>
    <label>Company Domain Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>