foundation-objs/main/default/objects/Lead/fields/Domestic_Payables__c.field-meta.xml
<CustomField>
    <fullName>Domestic_Payables__c</fullName>
    <label>Annual Domestic Payables</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>