foundation-objs/main/default/objects/Lead/fields/Eligible_for_e_invoicing__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_e_invoicing__c</fullName>
    <label>Eligible for e-invoicing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>