foundation-objs/main/default/objects/Lead/fields/Employee_Size_Range__c.field-meta.xml
<CustomField>
    <fullName>Employee_Size_Range__c</fullName>
    <label>Employee Size Range</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - 10</fullName>
            </value>
            <value>
                <fullName>11 - 50</fullName>
            </value>
            <value>
                <fullName>51 - 200</fullName>
            </value>
            <value>
                <fullName>201 - 500</fullName>
            </value>
            <value>
                <fullName>501 - 1000</fullName>
            </value>
            <value>
                <fullName>1001 - 5000</fullName>
            </value>
            <value>
                <fullName>5001 - 10000</fullName>
            </value>
            <value>
                <fullName>10000+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>