foundation-objs/main/default/objects/Lead/fields/engagements_last_meeting_booked__c.field-meta.xml
<CustomField>
    <fullName>engagements_last_meeting_booked__c</fullName>
    <description>The date of the last meeting that has been scheduled by a contact through the meetings tool. If multiple meetings have been scheduled, the date of the last chronological meeting in the timeline is shown.</description>
    <label>Date of last meeting booked in meetings</label>
    <type>DateTime</type>
</CustomField>