foundation-objs/main/default/objects/Lead/fields/Erp_New__c.field-meta.xml
<CustomField>
    <fullName>Erp_New__c</fullName>
    <label>Erp New</label>
    <length>40</length>
    <type>Text</type>
</CustomField>