foundation-objs/main/default/objects/Lead/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event_Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>