foundation-objs/main/default/objects/Lead/fields/Expected_closure_date__c.field-meta.xml
<CustomField>
    <fullName>Expected_closure_date__c</fullName>
    <label>Expected closure date</label>
    <type>Date</type>
</CustomField>